Initialized Back-end and Database

--- a/views/index.html
+++ b/views/index.html
@@ -9,13 +9,13 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gamja+Flower|Merriweather|Roboto+Slab">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="CSS/custom.css">
+        <link rel="stylesheet" href="css/custom.css">
     </head>
     <body>
         <center>
             <h2 style="font-family: 'Gamja Flower', serif; color: grey; font-size: 6vh">Chords Station</h2>
             <div id="video_div"><div id='player' height="390"  width: "640"></div></div>
-            <i id="timer" style="color: black; "></i>
+            <i id="timer" style="color: black;"></i>
             <div class="icon-bar">
                 <a class="active" href="#">
                     <i class="fa fa-play" onclick="findSongChords('Dil Mere', 'Local Train');" style="font-size: 7vh"></i>
@@ -33,5 +33,5 @@
             </div>
         </center>
     </body>
-    <script type="text/javascript" src="Scripts/custom.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
 </html>
