--- a/views/css/custom.css
+++ b/views/css/custom.css
@@ -1,5 +1,11 @@
 body {margin:0;}
 
+.title {
+    font-family: 'Gamja Flower', serif;
+    color: grey;
+    font-size: 6vh;
+}
+
 .inline {
     display: inline-block;
 }
