--- a/views/css/custom.css
+++ b/views/css/custom.css
@@ -40,3 +40,27 @@ body {margin:0;}
 .active {
     background-color: #4CAF50 !important;
 }
+
+/* Carousel */
+
+.carousel {
+  background: #EEE;
+}
+
+.carousel-cell {
+  width: 66%;
+  height: 200px;
+  margin-right: 10px;
+  background: #8C8;
+  border-radius: 5px;
+  counter-increment: gallery-cell;
+}
+
+.carousel-cell:before {
+  display: block;
+  text-align: center;
+  content: counter(gallery-cell);
+  line-height: 200px;
+  font-size: 80px;
+  color: white;
+}
